--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <title>Rusty Records</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
+        <link rel="icon" href="/img/favicon.ico">
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <h1 style="display: none;">Rusty Records</h1>
         <section id="main">
             <h2>Rus<img src="img/music_tp.png" id="t-note">y Records</h2>
-            <button id="searchbtn">
-              <a href="#searchBy">Search</a>
-            </button>
+            <a href="#searchBy">
+                <button id="searchbtn">Search</button>
+            </a>
             <div class="wave wave1"></div>
             <div class="wave wave2"></div>
             <div class="wave wave3"></div>
@@ -22,19 +23,36 @@
             <div class="grid-container">
                 <div class="grid-item"></div>
                 <div class="grid-item item">
-                    <img id="searchby-img1" src="img/searchby-singer.png" alt="Search by singer"/>
+                    <img class="searchby-img" src="img/searchby-singer.png" alt="Search by singer"/>
                     <span class="searchby-item-title">Singer</span>
                 </div>
                 <div class="grid-item item">
-                    <img id="searchby-img1" src="img/searchby-movie.png" alt="Search by movie"/>
+                    <img class="searchby-img" src="img/searchby-movie.png" alt="Search by movie"/>
                     <span class="searchby-item-title">Movie</span>
                 </div>
                 <div class="grid-item item">
-                    <img id="searchby-img1" src="img/searchby-song.png" alt="Search by song"/>
+                    <img class="searchby-img" src="img/searchby-song.png" alt="Search by song"/>
                     <span class="searchby-item-title">Song</span>
                 </div>
                 <div class="grid-item"></div>
             </div>
         </section>
+        <br>
+        <nav>
+            <h2 style="display:none;">Footer - Navigation Links</h2>
+            <ul class="container">
+                <li>
+                    <a href=""><img src="img/social-github.png" alt="Github RKP" class="social-icon"></a>
+                    <a href=""><img src="img/social-linkedin.png" alt="LinkedIn RKP" class="social-icon"></a>
+                </li>
+                <li class="devs">
+                    Designed &amp; Developed by<br><strong>RAVI KANT &amp; KETAN</strong>
+                </li>
+                <li>
+                    <a href=""><img src="img/social-linkedin.png" alt="LinkedIn KS" class="social-icon"></a>
+                    <a href=""><img src="img/social-github.png" alt="Github KS" class="social-icon"></a>
+                </li>
+            </ul>
+        </nav>
     </body>
 </html>
