--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1 style="display: none;">Rusty Records</h1>
+        <h1 class="section-head-hide">Rusty Records</h1>
         <section id="main">
-            <h2>Rus<img src="img/music_tp.png" id="t-note">y Records</h2>
+            <img src="/img/logo_tp.png" alt="Logo" id=logo>
+            <h2>Rusty Records</h2>
             <a href="#searchBy">
                 <button id="searchbtn">Search</button>
             </a>
@@ -18,22 +19,25 @@
             <div class="wave wave3"></div>
         </section>
         <section id="searchBy">
-            <h2>Search By :</h2>
+            <h2>Search By:</h2>
             <hr class="hr-head">
             <div class="grid-container">
                 <div class="grid-item"></div>
-                <div class="grid-item item">
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Singer</h2>
                     <img class="searchby-img" src="img/searchby-singer.png" alt="Search by singer"/>
                     <span class="searchby-item-title">Singer</span>
-                </div>
-                <div class="grid-item item">
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Movie</h2>
                     <img class="searchby-img" src="img/searchby-movie.png" alt="Search by movie"/>
                     <span class="searchby-item-title">Movie</span>
-                </div>
-                <div class="grid-item item">
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Song</h2>
                     <img class="searchby-img" src="img/searchby-song.png" alt="Search by song"/>
                     <span class="searchby-item-title">Song</span>
-                </div>
+                </section>
                 <div class="grid-item"></div>
             </div>
         </section>
