--- a/index.html
+++ b/index.html
@@ -19,42 +19,140 @@
             <div class="wave wave3"></div>
         </section>
         <section id="searchBy">
-            <h2>Search By:</h2>
+            <h2>Search By:
+                <input type="text" class="search" name="search" placeholder="Search... Song, Singer or Movie...">
+            </h2>
             <hr class="hr-head">
             <div class="grid-container">
                 <div class="grid-item"></div>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Singer</h2>
-                    <img class="searchby-img" src="img/searchby-singer.png" alt="Search by singer"/>
-                    <span class="searchby-item-title">Singer</span>
+                    <a href="#topArtists"><img class="searchby-img" src="img/searchby-singer.png" alt="Search by singer"/>
+                    <span class="searchby-item-title">Singer</span></a>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Movie</h2>
-                    <img class="searchby-img" src="img/searchby-movie.png" alt="Search by movie"/>
-                    <span class="searchby-item-title">Movie</span>
+                    <a href="#topMovies"><img class="searchby-img" src="img/searchby-movie.png" alt="Search by movie"/>
+                    <span class="searchby-item-title">Movie</span></a>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Song</h2>
-                    <img class="searchby-img" src="img/searchby-song.png" alt="Search by song"/>
-                    <span class="searchby-item-title">Song</span>
+                    <a href="#trending"><img class="searchby-img" src="img/searchby-song.png" alt="Search by song"/>
+                    <span class="searchby-item-title">Song</span></a>
                 </section>
                 <div class="grid-item"></div>
             </div>
+            <hr class="hr-head">
+        </section>
+        <section class="section-top">
+            <h2>Top Picks:</h2>
+            <div class="grid-container">
+                <div class="grid-item"></div>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Song1</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Top Pick" class="placeholder-img">
+                    <span class="searchby-item-title">Song1</span>
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Song2</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Top Pick" class="placeholder-img">
+                    <span class="searchby-item-title">Song2</span>
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Song3</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Top Pick" class="placeholder-img">
+                    <span class="searchby-item-title">Song3</span>
+                </section>
+                <div class="grid-item"></div>
+            </div>
+            <hr class="hr-head">
+        </section>
+        <section id="trending" class="section-top">
+            <h2>Trending:</h2>
+            <div class="grid-container">
+                <div class="grid-item"></div>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Song1</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Trending Song" class="placeholder-img">
+                    <span class="searchby-item-title">Song1</span>
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Song2</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Trending Song" class="placeholder-img">
+                    <span class="searchby-item-title">Song2</span>
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Song3</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Trending Song" class="placeholder-img">
+                    <span class="searchby-item-title">Song3</span>
+                </section>
+                <div class="grid-item"></div>
+            </div>
+            <hr class="hr-head">
+        </section>
+        <section id="topMovies" class="section-top">
+            <h2>Top Searched Movies:</h2>
+            <div class="grid-container">
+                <div class="grid-item"></div>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Movie1</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Top Movie" class="placeholder-img">
+                    <span class="searchby-item-title">Movie1</span>
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Movie2</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Top Movie" class="placeholder-img">
+                    <span class="searchby-item-title">Movie2</span>
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Movie3</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Top Movie" class="placeholder-img">
+                    <span class="searchby-item-title">Movie3</span>
+                </section>
+                <div class="grid-item"></div>
+            </div>
+            <hr class="hr-head">
+        </section>
+        <section id="topArtists" class="section-top">
+            <h2>Top Searched Artists:</h2>
+            <div class="grid-container">
+                <div class="grid-item"></div>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Artist1</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Top Artist" class="placeholder-img">
+                    <span class="searchby-item-title">Artist1</span>
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Artist2</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Top Artist" class="placeholder-img">
+                    <span class="searchby-item-title">Artist2</span>
+                </section>
+                <section class="grid-item item">
+                    <h2 class="section-head-hide">Artist3</h2>
+                    <img src="/img/placeholder-music.jpg" alt="Top Artist" class="placeholder-img">
+                    <span class="searchby-item-title">Artist3</span>
+                </section>
+                <div class="grid-item"></div>
+            </div>
+            <hr class="hr-head">
         </section>
         <br>
         <nav>
             <h2 style="display:none;">Footer - Navigation Links</h2>
+            <a href="#">
+                <img src="/img/up.png" alt="Go Up Icon" class="up-icon">
+            </a>
             <ul class="container">
                 <li>
-                    <a href=""><img src="img/social-github.png" alt="Github RKP" class="social-icon"></a>
-                    <a href=""><img src="img/social-linkedin.png" alt="LinkedIn RKP" class="social-icon"></a>
+                    <a href="https://github.com/rvkantpujari" target="blank"><img src="img/social-github.png" alt="Github RKP" class="social-icon"></a>
+                    <a href="https://in.linkedin.com/in/ravikantpujari" target="blank"><img src="img/social-linkedin.png" alt="LinkedIn RKP" class="social-icon"></a>
                 </li>
                 <li class="devs">
                     Designed &amp; Developed by<br><strong>RAVI KANT &amp; KETAN</strong>
                 </li>
                 <li>
-                    <a href=""><img src="img/social-linkedin.png" alt="LinkedIn KS" class="social-icon"></a>
-                    <a href=""><img src="img/social-github.png" alt="Github KS" class="social-icon"></a>
+                    <a href="https://in.linkedin.com/in/ketansuthar" target="blank"><img src="img/social-linkedin.png" alt="LinkedIn KS" class="social-icon"></a>
+                    <a href="https://github.com/ketan-suthar" target="blank"><img src="img/social-github.png" alt="Github KS" class="social-icon"></a>
                 </li>
             </ul>
         </nav>
