--- a/index.html
+++ b/index.html
@@ -139,8 +139,11 @@
         <br>
         <nav>
             <h2 style="display:none;">Footer - Navigation Links</h2>
-            <a href="#">
+            <a href="#" title="Go to Top">
                 <img src="/img/up.png" alt="Go Up Icon" class="up-icon">
+            </a>
+            <a href="login.html" title="Login Here!!!">
+                <img src="/img/admin.png" alt="Go Up Icon" class="login">
             </a>
             <ul class="container">
                 <li>
