--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <title>Rusty Records</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
-        <link rel="icon" href="/img/favicon.ico">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="icon" href="./img/favicon.ico">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
         <h1 class="section-head-hide">Rusty Records</h1>
         <section id="main">
-            <img src="/img/logo_tp.png" alt="Logo" id=logo>
+            <img src="./img/logo_tp.png" alt="Logo" id=logo>
             <h2>Rusty Records</h2>
             <a href="#searchBy">
                 <button id="searchbtn">Search</button>
@@ -50,17 +50,17 @@
                 <div class="grid-item"></div>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Song1</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Top Pick" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Top Pick" class="placeholder-img">
                     <span class="searchby-item-title">Song1</span>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Song2</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Top Pick" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Top Pick" class="placeholder-img">
                     <span class="searchby-item-title">Song2</span>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Song3</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Top Pick" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Top Pick" class="placeholder-img">
                     <span class="searchby-item-title">Song3</span>
                 </section>
                 <div class="grid-item"></div>
@@ -73,17 +73,17 @@
                 <div class="grid-item"></div>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Song1</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Trending Song" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Trending Song" class="placeholder-img">
                     <span class="searchby-item-title">Song1</span>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Song2</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Trending Song" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Trending Song" class="placeholder-img">
                     <span class="searchby-item-title">Song2</span>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Song3</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Trending Song" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Trending Song" class="placeholder-img">
                     <span class="searchby-item-title">Song3</span>
                 </section>
                 <div class="grid-item"></div>
@@ -96,17 +96,17 @@
                 <div class="grid-item"></div>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Movie1</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Top Movie" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Top Movie" class="placeholder-img">
                     <span class="searchby-item-title">Movie1</span>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Movie2</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Top Movie" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Top Movie" class="placeholder-img">
                     <span class="searchby-item-title">Movie2</span>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Movie3</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Top Movie" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Top Movie" class="placeholder-img">
                     <span class="searchby-item-title">Movie3</span>
                 </section>
                 <div class="grid-item"></div>
@@ -119,17 +119,17 @@
                 <div class="grid-item"></div>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Artist1</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Top Artist" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Top Artist" class="placeholder-img">
                     <span class="searchby-item-title">Artist1</span>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Artist2</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Top Artist" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Top Artist" class="placeholder-img">
                     <span class="searchby-item-title">Artist2</span>
                 </section>
                 <section class="grid-item item">
                     <h2 class="section-head-hide">Artist3</h2>
-                    <img src="/img/placeholder-music.jpg" alt="Top Artist" class="placeholder-img">
+                    <img src="img/placeholder-music.jpg" alt="Top Artist" class="placeholder-img">
                     <span class="searchby-item-title">Artist3</span>
                 </section>
                 <div class="grid-item"></div>
@@ -140,10 +140,10 @@
         <nav>
             <h2 style="display:none;">Footer - Navigation Links</h2>
             <a href="#" title="Go to Top">
-                <img src="/img/up.png" alt="Go Up Icon" class="up-icon">
+                <img src="img/up.png" alt="Go Up Icon" class="up-icon">
             </a>
             <a href="login.html" title="Login Here!!!">
-                <img src="/img/admin.png" alt="Go Up Icon" class="login">
+                <img src="img/admin.png" alt="Go Up Icon" class="login">
             </a>
             <ul class="container">
                 <li>
