--- a/login.html
+++ b/login.html
@@ -3,16 +3,16 @@
     <head>
         <title>Login | Rusty Records</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
-        <link rel="icon" href="/img/favicon.ico">
-        <link rel="stylesheet" href="/css/login-signup.css">
+        <link rel="icon" href="img/favicon.ico">
+        <link rel="stylesheet" href="css/login-signup.css">
     </head>
     <body>
         <h1 class="hidden">Login with Rusty Records</h1>
-        <!--<img src="/img/home.png" alt="Home Icon" class="top-left-home-icon">-->
+        <!--<img src="img/home.png" alt="Home Icon" class="top-left-home-icon">-->
         <section class="grid-container">
             <h2 class="hidden">Grid Containers</h2>
             <section class="left">
-                <h2>Rusty Records</h2>
+                <h2><a href="index.html">Rusty Records</a></h2>
             </section>
             <section class="right">
                 <h2 class="hidden">Login Box</h2>
@@ -23,7 +23,7 @@
                             <circle cx="60" cy="60" r="60" fill="#3586ff" />
                             Sorry, your browser does not support inline SVG.
                         </svg>
-                        <img src="/img/logo_tp.png" alt="Logo" class="logo">
+                        <img src="img/logo_tp.png" alt="Logo" class="logo">
                     </a>
                     <form>
                         <input type="text" placeholder="Enter Email" id="email">
@@ -41,7 +41,7 @@
     <!--<nav class="navbar">
             <ul>
                 <li class="logo">
-                    <img src="/img/logo_tp.png" alt="Logo">
+                    <img src="img/logo_tp.png" alt="Logo">
                     <span class="name">Rusty Records</span>
                 </li>
             </ul>
