--- a/aboutUs.html
+++ b/aboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/favicon.ico">
-    <title>View Lyrics | Rusty Records</title>
+    <title>View Album | Rusty Records</title>
     <link rel="stylesheet" href="./css/main-style.css">
 </head>
 <body>
@@ -21,13 +21,15 @@
                 </ul>
             </nav>
         </section>
-        <section class="top-display-container">
-            <section class="left-disp">
-                Song list
+        <section class="top-about-container">
+            <section class="one">
+                <img class="profile-img" src="img/profile_ravikant.jpg" alt="">
             </section>
-            <section class="right-disp">
-                Lyrics of selected song
+            <section>
+                <img class="profile-img" src="img/profile_ketan.jpg" alt="">
             </section>
+            <section>ravi</section>
+            <section>kant</section>
         </section>
         <!--Footer-->
         <footer class="flex-container">
