--- a/login.html
+++ b/login.html
@@ -5,6 +5,9 @@
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <link rel="icon" href="img/favicon.ico">
         <link rel="stylesheet" href="css/login-signup.css">
+        <script>
+            //alert(window.innerWidth);
+        </script>
     </head>
     <body>
         <h1 class="hidden">Login with Rusty Records</h1>
@@ -12,37 +15,23 @@
         <section class="grid-container">
             <h2 class="hidden">Grid Containers</h2>
             <section class="left">
+                <canvas></canvas>
                 <h2><a href="index.html">Rusty Records</a></h2>
             </section>
-            <section class="right">
+            <section class="right box-container" id="loginSection">
                 <h2 class="hidden">Login Box</h2>
-                <section class="box-container">
-                    <h2 class="hidden">Logo with SVG background</h2>
-                    <a href="index.html" title="Rusty Records">
-                        <svg width="200" height="200" class="svg-logo">
-                            <circle cx="60" cy="60" r="60" fill="#3586ff" />
-                            Sorry, your browser does not support inline SVG.
-                        </svg>
-                        <img src="img/logo_tp.png" alt="Logo" class="logo">
-                    </a>
-                    <form>
-                        <input type="text" placeholder="Enter Email" id="email">
-                        <input type="password" placeholder="Enter Password" id="password">
-                        <a href="signup.html" class="link-text">Don't have an account?</a>
-                        <input type="submit" value="Login">
-                    </form>
-                </section>
+                <h2 class="hidden">Logo with SVG background</h2>
+                <a href="index.html" title="Rusty Records">
+                    <img src="img/logo_tp.png" alt="Logo" class="logo">
+                </a>
+                <form method="POST" id="loginForm">
+                    <input type="text" placeholder="Enter Email">
+                    <input type="password" placeholder="Enter Password">
+                    <a href="signup.html" class="link-text">Don't have an account?</a>
+                    <input type="submit" value="Login">
+                </form>
             </section>
         </section>
+        <script src="js/canvas.js"></script>
     </body>
 </html>
-
-
-    <!--<nav class="navbar">
-            <ul>
-                <li class="logo">
-                    <img src="img/logo_tp.png" alt="Logo">
-                    <span class="name">Rusty Records</span>
-                </li>
-            </ul>
-        </nav>-->
