--- a/signup.html
+++ b/signup.html
@@ -12,28 +12,25 @@
         <section class="grid-container">
             <h2 class="hidden">Grid Containers</h2>
             <section class="left">
+                <canvas></canvas>
                 <h2><a href="index.html">Rusty Records</a></h2>
             </section>
-            <section class="right">
+            <section class="right box-container" id="regSection">
                 <h2 class="hidden">SignUp Box</h2>
-                <section class="box-container">
-                    <h2 class="hidden">Logo with SVG background</h2>
-                    <a href="index.html" title="Rusty Records">
-                        <svg width="200" height="200" class="svg-logo">
-                            <circle cx="60" cy="60" r="60" fill="#3586ff" />
-                            Sorry, your browser does not support inline SVG.
-                        </svg>
-                        <img src="img/logo_tp.png" alt="Logo" class="logo">
-                    </a>
-                    <form>
-                        <input type="text" placeholder="Enter Name" id="name">
-                        <input type="email" placeholder="Enter Email" id="email" style="margin-top: 0px;">
-                        <input type="password" placeholder="Enter Password" id="password">
-                        <a href="login.html" class="link-text">Already have an account?</a>
-                        <input type="submit" value="SignUp">
-                    </form>
-                </section>
+                <h2 class="hidden">Logo with SVG background</h2>
+                <a href="index.html" title="Rusty Records">
+                    <img src="img/logo_tp.png" alt="Logo" class="logo">
+                </a>
+                <form method="POST" id="regForm">
+                    <input type="text" placeholder="Enter Name" id="name">
+                    <input type="email" placeholder="Enter Email" id="email" style="margin-top: 0px;">
+                    <input type="password" placeholder="Enter Password">
+                    <input type="password" placeholder="Confirm Password">
+                    <a href="login.html" class="link-text">Already have an account?</a>
+                    <input type="submit" value="SignUp">
+                </form>
             </section>
         </section>
+        <script src="js/canvas.js"></script>
     </body>
 </html>
