--- a/viewAlbum.html
+++ b/viewAlbum.html
@@ -17,16 +17,16 @@
                     <li><a href="viewArtist.html">Artist</a></li>
                     <span id="logo"><a href="index.html"><img src="./img/logo_tp.png" alt="Rusty Records Logo"></a></span>
                     <li><a href="viewLyrics.html">Lyrics</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="aboutUs.html">About Us</a></li>
                 </ul>
             </nav>
         </section>
         <section class="top-display-container">
             <section class="left-disp">
-                Album
+                Album List
             </section>
             <section class="right-disp">
-                Songs
+                Song List
             </section>
         </section>
         <!--Footer-->
