--- a/viewArtist.html
+++ b/viewArtist.html
@@ -17,7 +17,7 @@
                     <li><a href="viewArtist.html">Artist</a></li>
                     <span id="logo"><a href="index.html"><img src="./img/logo_tp.png" alt="Rusty Records Logo"></a></span>
                     <li><a href="viewLyrics.html">Lyrics</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="aboutUs.html">About Us</a></li>
                 </ul>
             </nav>
         </section>
