--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
+        <a href="login.html"><img src="img/login.png" alt="Login Icon" class="login-icon"></a>
+        <!--<a href="signup.html"><img src="img/up.png" alt="Go Up Icon" class="go-up-icon"></a>-->
         <section id="main">
-            <img src="./img/logo_tp.png" alt="Logo" id=logo>
+            <!--<img src="./img/logo_tp.png" alt="Logo" id=logo>-->
+            <canvas class="logo" id="acetateDisc" id="logo" title="Rusty Records" data-logo="Rusty Records"></canvas>
             <h1>Rusty Records</h1>
             <a href="#searchBy">
                 <button id="searchbtn">Search</button>
@@ -20,65 +23,66 @@
         <section class="grid-container">
             <h2 class="grid-title" id="searchBy">Search By:</h2>
             <section class="grid-item1 item">
-                <a href="viewArtist.html"><img class="grid-itme-img" src="img/mello_otq1.svg" alt="Search by singer"/>
+                <a href="viewArtist.html"><img class="grid-item-img" src="img/mello_otq1.svg" alt="Search by singer"/>
                 <h2 class="item-title">Artist</h2></a>
             </section>
             <section class="grid-item2 item">
-                <a href="viewAlbum.html"><img class="grid-itme-img" src="img/movie_night_fldd.svg" alt="Search by movie"/>
+                <a href="viewAlbum.html"><img class="grid-item-img" src="img/movie_night_fldd.svg" alt="Search by movie"/>
                 <h2 class="item-title">Album</h2></a>
             </section>
             <section class="grid-item3 item">
-                <a href="viewLyrics.html"><img class="grid-itme-img" src="img/compose_music_ovo2.svg" alt="Search by song"/>
+                <a href="viewLyrics.html"><img class="grid-item-img" src="img/compose_music_ovo2.svg" alt="Search by song"/>
                 <h2 class="item-title">Song</h2></a>
             </section>
         </section>
         <section class="grid-container">
             <h2 class="grid-title">Top Picks:</h2>
             <section class="grid-item1 item">
-                <a href="viewArtist.html"><img class="grid-itme-img" src="img/beer_celebration_cefj.svg" alt="Search by singer"/>
+                <a href="#"><img class="grid-item-img" src="img/beer_celebration_cefj.svg" alt="Search by singer"/>
                 <h2 class="item-title">Album 1</h2></a>
             </section>
             <section class="grid-item2 item">
-                <a href="viewAlbum.html"><img class="grid-itme-img" src="img/game_day_ucx9.svg" alt="Search by movie"/>
+                <a href="#"><img class="grid-item-img" src="img/game_day_ucx9.svg" alt="Search by movie"/>
                 <h2 class="item-title">Album 2</h2></a>
             </section>
             <section class="grid-item3 item">
-                <a href="viewLyrics.html"><img class="grid-itme-img" src="img/editable_dywm.svg" alt="Search by song"/>
+                <a href="#"><img class="grid-item-img" src="img/editable_dywm.svg" alt="Search by song"/>
                 <h2 class="item-title">Album 3</h2></a>
             </section>
         </section>
         <section class="grid-container">
             <h2 class="grid-title">Top Artist:</h2>
             <section class="grid-item1 item">
-                <a href="viewArtist.html"><img class="grid-itme-img" src="img/music_r1se.svg" alt="Search by singer"/>
+                <a href="#"><img class="grid-item-img" src="img/music_r1se.svg" alt="Search by singer"/>
                 <h2 class="item-title">Artist 1</h2></a>
             </section>
             <section class="grid-item2 item">
-                <a href="viewAlbum.html"><img class="grid-itme-img" src="img/walk_in_the_city_1ma6.svg" alt="Search by movie"/>
+                <a href="#"><img class="grid-item-img" src="img/walk_in_the_city_1ma6.svg" alt="Search by movie"/>
                 <h2 class="item-title">Artist 2</h2></a>
             </section>
             <section class="grid-item3 item">
-                <a href="viewLyrics.html"><img class="grid-itme-img" src="img/happy_music_g6wc.svg" alt="Search by song"/>
+                <a href="#"><img class="grid-item-img" src="img/happy_music_g6wc.svg" alt="Search by song"/>
                 <h2 class="item-title">Artist 3</h2></a>
             </section>
         </section>
 
-        <footer>
-            <nav>
-                <ul class="container">
-                    <li class="links">
-                        <a href="https://github.com/rvkantpujari" target="blank"><img src="img/social-github.png" alt="Github RKP" class="social-icon"></a>
-                        <a href="https://in.linkedin.com/in/ravikantpujari" target="blank"><img src="img/social-linkedin.png" alt="LinkedIn RKP" class="social-icon"></a>
-                    </li>
-                    <li class="info">
-                        Designed &amp; Developed by<br><strong>RAVI KANT &amp; KETAN</strong>
-                    </li>
-                    <li class="links">
-                        <a href="https://github.com/ketan-suthar" target="blank"><img src="img/social-github.png" alt="Github KS" class="social-icon"></a>
-                        <a href="https://in.linkedin.com/in/ketansuthar" target="blank"><img src="img/social-linkedin.png" alt="LinkedIn KS" class="social-icon"></a>
-                    </li>
-                </ul>
-            </nav>
+        <footer class="flex-container">
+            <p class="flex-item social-links">
+                <a href="https://github.com/rvkantpujari" target="blank"><img src="img/social-github.png" alt="Github RKP" class="social-icon"></a>
+                <a href="https://in.linkedin.com/in/ravikantpujari" target="blank"><img src="img/social-linkedin.png" alt="LinkedIn RKP" class="social-icon"></a>
+            </p>
+            <p class="flex-item">
+                Rusty Records Copyright &copy;<span id="year"></span>
+                <script>
+                    let d = new Date();
+                    document.getElementById('year').innerHTML = d.getFullYear();
+                </script>
+            </p>
+            <p class="flex-item social-links">
+                <a href="https://in.linkedin.com/in/ravikantpujari" target="blank"><img src="img/social-linkedin.png" alt="LinkedIn RKP" class="social-icon"></a>
+                <a href="https://github.com/rvkantpujari" target="blank"><img src="img/social-github.png" alt="Github RKP" class="social-icon"></a>
+            </p>
         </footer>
+        <script src="js/acetateDisc.js"></script>
     </body>
 </html>
