--- a/signup.html
+++ b/signup.html
@@ -12,15 +12,16 @@
         <section class="grid-container">
             <h2 class="hidden">Grid Containers</h2>
             <section class="left">
-                <canvas></canvas>
                 <h2><a href="index.html">Rusty Records</a></h2>
             </section>
             <section class="right box-container" id="regSection">
                 <h2 class="hidden">SignUp Box</h2>
-                <h2 class="hidden">Logo with SVG background</h2>
                 <a href="index.html" title="Rusty Records">
-                    <img src="img/logo_tp.png" alt="Logo" class="logo">
+                    <canvas class="logo" id="acetateDisc"></canvas>
                 </a>
+                <!--<a href="index.html" title="Rusty Records">
+                    <img src="img/logo_tp.png" alt="Logo" class="logo">
+                </a>-->
                 <form method="POST" id="regForm">
                     <input type="text" placeholder="Enter Name" id="name">
                     <input type="email" placeholder="Enter Email" id="email" style="margin-top: 0px;">
@@ -31,6 +32,6 @@
                 </form>
             </section>
         </section>
-        <script src="js/canvas.js"></script>
+        <script src="js/acetateDisc.js"></script>
     </body>
 </html>
