--- a/signup.html
+++ b/signup.html
@@ -23,15 +23,16 @@
                     <img src="img/logo_tp.png" alt="Logo" class="logo">
                 </a>-->
                 <form method="POST" id="regForm">
-                    <input type="text" placeholder="Enter Name" id="name">
-                    <input type="email" placeholder="Enter Email" id="email" style="margin-top: 0px;">
-                    <input type="password" placeholder="Enter Password">
-                    <input type="password" placeholder="Confirm Password">
+                    <input type="text" placeholder="Enter Name" id="inpName">
+                    <input type="email" placeholder="Enter Email" id="inpEmail" style="margin-top: 0px;">
+                    <input type="password" placeholder="Enter Password" id="inpPswrd">
+                    <input type="password" placeholder="Confirm Password" id="inpCnfPswrd">
                     <a href="login.html" class="link-text">Already have an account?</a>
-                    <input type="submit" value="SignUp">
+                    <input type="submit" value="SignUp" id="submitBtn">
                 </form>
             </section>
         </section>
         <script src="js/acetateDisc.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
